apps/dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: dashboard
spec:
  ports:
  - port: 80
    targetPort: 3000
    name: http
  selector:
    app: homepage
